--- a/src/qt/BGL_locale.qrc
+++ b/src/qt/BGL_locale.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/translations">
         <file alias="af">locale/BGL_af.qm</file>
         <file alias="am">locale/BGL_am.qm</file>
+        <file alias="ar">locale/BGL_ar.qm</file>
         <file alias="az">locale/BGL_az.qm</file>
         <file alias="az@latin">locale/BGL_az@latin.qm</file>
         <file alias="be">locale/BGL_be.qm</file>
@@ -87,7 +88,6 @@
         <file alias="pt_BR">locale/BGL_pt_BR.qm</file>
         <file alias="ro">locale/BGL_ro.qm</file>
         <file alias="ru">locale/BGL_ru.qm</file>
-        <file alias="ru_RU">locale/BGL_ru_RU.qm</file>
         <file alias="sc">locale/BGL_sc.qm</file>
         <file alias="sd">locale/BGL_sd.qm</file>
         <file alias="si">locale/BGL_si.qm</file>
@@ -104,7 +104,6 @@
         <file alias="szl">locale/BGL_szl.qm</file>
         <file alias="ta">locale/BGL_ta.qm</file>
         <file alias="te">locale/BGL_te.qm</file>
-        <file alias="th">locale/BGL_th.qm</file>
         <file alias="tk">locale/BGL_tk.qm</file>
         <file alias="tl">locale/BGL_tl.qm</file>
         <file alias="tr">locale/BGL_tr.qm</file>
